--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "hyperapp": "^1.2.8",
-    "parcel-bundler": "^1.9.7",
-    "uikit": "^3.0.0-rc.10"
+    "parcel-bundler": "^1.9.7"
+  },
+  "devDependencies": {
+    "express": "^4.16.3",
+    "http-proxy-middleware": "^0.18.0"
   }
 }
