--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.18.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.7.0",
+    "bulma": "^0.7.1",
     "hyperapp": "^1.2.8",
     "parcel-bundler": "^1.9.7"
   },
