--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node proxy.js",
-    "build": "parcel build index.html --public-url",
+    "build": "parcel build index.html --public-url ./ prodaction",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
